<resources>
    <string name="app_name">WantWant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio_home_text">首页</string>
    <string name="radio_qa_text">问答</string>
    <string name="radio_collection_text">收藏</string>
    <string name="radio_find_text">发现</string>
    <string name="radio_me_text">我的</string>
    <string name="text_account">账号</string>
    <string name="text_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_re_pwd">确认密码</string>
    <string name="text_confirm">确定</string>
    <string name="text_logout">退出登录</string>

</resources>