<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.want.want.fragment.home.HomeFragment"
        android:label="@string/radio_home_text"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/questionsFragment"
        android:name="com.want.want.fragment.question.QuestionsFragment"
        android:label="@string/radio_qa_text"
        tools:layout="@layout/questions_fragment" />
    <fragment
        android:id="@+id/collectionFragment"
        android:name="com.want.want.fragment.collect.CollectionFragment"
        android:label="@string/radio_collection_text"
        tools:layout="@layout/collection_fragment" />
    <fragment
        android:id="@+id/findFragment"
        android:name="com.want.want.fragment.FindFragment"
        android:label="@string/radio_find_text"
        tools:layout="@layout/find_fragment" />
    <fragment
        android:id="@+id/meFragment"
        android:name="com.want.want.fragment.me.MeFragment"
        android:label="@string/radio_me_text"
        tools:layout="@layout/me_fragment" />
</navigation>