<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="layout"
            type="com.want.want.activity.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.login.LoginActivity">

        <include
            android:id="@+id/title"
            layout="@layout/view_model_title"
            app:title="@{layout.MTitleVM}" />

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_32"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_20"
            android:hint="@string/text_account"
            app:layout_constraintTop_toBottomOf="@id/tvLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:text="@={layout.mUserName}"
                android:textColor="@color/colorGray3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_20"
            android:hint="@string/text_password"
            app:layout_constraintTop_toBottomOf="@id/tvName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:inputType="textPassword"
                android:text="@={layout.mPassword}"
                android:textColor="@color/colorGray3" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_110"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@color/colorAccent"
            android:onClick="@{()->layout.onLogin()}"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPwd" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:onClick="@{()->layout.onRegister()}"
            android:text="@string/text_register"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>